--- a/LogisticsWeb/appsettings.json
+++ b/LogisticsWeb/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=.; Initial Catalog=Book; User ID=sa; Password=abc@123!; TrustServerCertificate=True"
+  }
 }
