--- a/Logistics.DataAccess/Logistics.DataAccess.csproj
+++ b/Logistics.DataAccess/Logistics.DataAccess.csproj
@@ -1,9 +1,9 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
@@ -16,7 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Logistics.DataAccess\Logistics.DataAccess.csproj" />
+    <ProjectReference Include="..\Logicstics.Models\Logistics.Models.csproj" />
+    <ProjectReference Include="..\Logistics.Utility\Logistics.Utility.csproj" />
   </ItemGroup>
 
 </Project>
