--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
     - productnetwork
     restart: on-failure
   sqlserver:
-    image: mcr.microsoft.com/mssql/server:latest
+    image: mcr.microsoft.com/mssql/server:2017-latest
     environment: 
       SA_PASSWORD: "abc@123!"
       ACCEPT_EULA: "Y"
