--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,4 +17,4 @@ jobs:
     - name: Build the Docker image
       run: 
        sudo docker compose down
-       sudo docker compose up --build
+       sudo docker compose up
